fix image on project when on mobile

--- a/src/shared/components/Project/Project.scss
+++ b/src/shared/components/Project/Project.scss
@@ -19,8 +19,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-right: 20px;
   
   // border: 1px solid red
+}
+
+.proj-img img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: 5%;
 }
 
 .proj-content {
@@ -36,20 +44,39 @@
 
 @media (max-width: $bp-laptop) {
   .proj-container {
-    grid-template-rows: repeat(8, 1fr);
-  }
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto;
+    }
+  
+    .proj-img {
+      grid-area: 1 / 1 / 2 / 2;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1em;
+    }
+  
+    .proj-img img {
+      max-width: 50%;
+      height: auto;
+      // box-shadow: 0 3px 4px rgba(0,0,0,0.15);
+    }
+  
+    .proj-content {
+      grid-area: 2 / 1 / 3 / 2;
+      width: 100%;
+    }
+}
 
+@media (max-width: $bp-mobile) {
   .proj-img {
-    grid-area: 1 / 3 / 4 / 7;
+    // grid-area: 1 / 2 / 4 / 8;
+    grid-area: 1 / 1 / 1 / 1;
+    visibility: hidden;
   }
 
   .proj-content {
-    grid-area: 4 / 1 / 9 / 9;
-  }
-}
-
-@media (max-width: $bp-tablet) {
-  .proj-img {
-    grid-area: 1 / 2 / 4 / 8;
+    grid-area: 1 / 1 / 3 / 2;
   }
 }
